--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,4 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@import url('https://fonts.googleapis.com/css?family=Staatliches&display=swap');
 
 html {
   min-height: 100%;
@@ -19,15 +7,20 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background: #004452;
   min-height: 100%;
   padding-bottom: 5rem;
 }
+h1,
+h2 {
+  color: white;
+  padding: 3rem 0;
+  text-align: center;
 
-header {
-  margin-top: 3rem;
-}
-header h1 {
-  color: black;
+  text-transform: uppercase;
+
+  font-family: 'Staatliches', cursive;
+  letter-spacing: 1px;
 }
 .lista-citas .media {
   border-bottom: 1px solid #e1e1e1;
@@ -46,6 +39,47 @@ header h1 {
 .lista-citas .media-body span {
   font-weight: bold;
 }
-.col-form-label {
-  font-size: 12px;
+
+label {
+  color: white;
+}
+
+input[type='date'],
+input[type='time'] {
+  height: 38px;
+  padding: 6px 10px;
+  background-color: #fff;
+  border: 1px solid #d1d1d1;
+  border-radius: 4px;
+  box-shadow: none;
+  box-sizing: border-box;
+}
+
+.cita {
+  padding: 2rem;
+  background: white;
+  border-bottom: 1px solid #e1e1e1;
+  color: black;
+}
+
+.cita p {
+  font-weight: bold;
+  margin-bottom: 0.8rem;
+}
+.cita p span {
+  font-weight: normal;
+}
+.cita:first-of-type {
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+}
+.cita:last-of-type {
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+}
+.button.eliminar,
+.button.eliminar:hover {
+  background-color: #c10059;
+  color: white;
+  margin-top: 2rem;
 }
