--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Staatliches&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 
 html {
   min-height: 100%;
@@ -19,7 +19,7 @@ h2 {
 
   text-transform: uppercase;
 
-  font-family: 'Staatliches', cursive;
+  font-family: 'Lato', sans-serif;
   letter-spacing: 1px;
 }
 .lista-citas .media {
