--- a/src/index.css
+++ b/src/index.css
@@ -83,3 +83,13 @@ input[type='time'] {
   color: white;
   margin-top: 2rem;
 }
+.notification {
+  border-radius: 4px;
+  padding: 1.25rem 2.5rem 1.25rem 1.5rem;
+  position: relative;
+  margin: 5px 0;
+}
+.error {
+  background-color: #ff3860;
+  color: #fff;
+}
